--- a/css/_index.scss
+++ b/css/_index.scss
@@ -2,7 +2,7 @@
 .header {
     display: flex;
     justify-content: space-between;
-    padding: 20px ;
+    padding: 20px 20px;
     line-height: 28px;
     box-shadow: 0 1px 10px 4px rgba(0, 0, 0, .1);
 
